# shortgen-try-2

./: .gitignore  cookies.txt  gen_dubbed_short_wf.py  main.py  parallel_batch_gen_workflow.py  pyproject.toml  test.py  yt_cookies.txt
.context/: google_genai_python_docs.md
config/: config.py  config.toml  config_ai_models.toml  config_gen.toml  config_languages.toml  gen_config_templates.json
data/: candidate_source_vids.json  candidate_source_vids.txt  youtube_channels.json
data/channels_shorts/: @geoalldayog.txt  Emil - Shorts_shorts_20250606_194749.json
data/db/: db.json
data/dled_shorts/GCbMNVgRrRI/: normalized_transcription.json  raw_transcription.json  source_metadata.json  subtitle.json  translate_prompt.json  (+2 more)
db/: db.py
dl/: cookies.txt  dl.py  extract_audios_from_vids.py  test_yt_dl.py  youtube_downloader.py  youtube_shorts_extractor.py  yt_cookies2.txt
helpers/: video_dir_name_from_id.py  word_count.py
llm/: gemini_client.py
metadata/: gen_metadata.py  gen_thumbnail.py
mix_vid/: mix_audio_to_vid.py
prompts/: gen_metadata.md  gen_thumbnail.md  gen_thumbnail_v2.md  modify_translation.md  translate_transcription.md  vocalize.md
sst/: normalize_tts_files.py  tts_groq_api copy.py  tts_groq_api.py
state/: update_state_after_batch_dl.py
text_over/: word_to_image.py
transcription/: groq_transcription.py  normalize_tts_files.py  transcription.py
transform/: transform.py
translate/: cook_translate_prompts.py  translate.py  translate_transcriptions.py
tts/: adjust_gened_speech_duration.py  gen_translated_tc_speech.py
(+59 files in other folders)
