[project]
name = "shortgen-try-2"
version = "0.1.0"
description = "an effort to automate to some degree the process of making short vids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.19.0",
    "groq>=0.26.0",
    "moviepy>=2.2.1",
    "yt-dlp>=2025.5.22",
]
