[project]
name = "shortgen-try-2"
version = "0.1.0"
description = "an effort to automate to some degree the process of making short vids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audiostretchy>=1.3.5",
    "dotenv>=0.9.9",
    "google-genai>=1.19.0",
    "groq>=0.26.0",
    "langchain>=0.3.26",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "pyrubberband>=0.4.0",
    "soundfile>=0.13.1",
    "tinydb>=4.8.2",
    "yt-dlp>=2025.5.22",
]
